fix: align header icons

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -3,6 +3,7 @@
 
   display: flex;
   align-items: center;
+  width: 100%;
 
   height: 4.4rem;
 
