--- a/src/components/HeaderIcons/header-icons.module.scss
+++ b/src/components/HeaderIcons/header-icons.module.scss
@@ -4,22 +4,31 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 5rem;
+  margin-left: 139.4rem;
 }
 
 .icon {
-  display: flex;
+  position: relative;
 }
 
 .notifications-count {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  position: absolute;
+  top: -6px;
+  left: 9px;
 
-    width: 1.8rem;
-    height: 1.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    font-size: 1.2rem;
-    color: variables.$color-text-xs;
-    background-color: variables.$color-accent;
-    border-radius: 50px;
-  }
+  width: 1.8rem;
+  height: 1.8rem;
+
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: variables.$color-text-xs;
+
+  background-color: variables.$color-accent;
+  border: 1px solid variables.$color-text-xs;
+  border-radius: 50px;
+}
