--- a/src/sass/abstracts/variables.module.scss
+++ b/src/sass/abstracts/variables.module.scss
@@ -13,6 +13,8 @@ $color-text-xxl: #000000;
 $color-accent: #ff0000;
 
 // Layout
+$screen-width: 1920px;
+
 $body-top-padding: 2rem;
 $body-left-padding: 3rem;
 
